<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/dynamic_time_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ic_legend_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dyn_date_before" />

    <ImageView
        android:id="@+id/ic_legend_green"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/ic_legend_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:color/holo_green_light" />

    <ImageView
        android:id="@+id/ic_legend_yellow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/ic_legend_red"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?android:attr/colorPressedHighlight" />

    <ImageView
        android:id="@+id/ic_legend_red"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/redPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/redPrimary" />

    <TextView
        android:id="@+id/tv_legend_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/legend_green_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_legend_green"
        app:layout_constraintStart_toEndOf="@+id/ic_legend_green"
        app:layout_constraintTop_toTopOf="@+id/ic_legend_green" />

    <TextView
        android:id="@+id/tv_legend_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/legend_yellow_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_legend_yellow"
        app:layout_constraintStart_toEndOf="@+id/ic_legend_yellow"
        app:layout_constraintTop_toTopOf="@+id/ic_legend_yellow" />

    <TextView
        android:id="@+id/tv_legend_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/legend_red_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_legend_red"
        app:layout_constraintStart_toEndOf="@+id/ic_legend_red"
        app:layout_constraintTop_toTopOf="@+id/ic_legend_red" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="64dp" />

    <Button
        android:id="@+id/btn_dyn_show_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_btn_date"
        android:text="@string/show_date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_dyn_date_before"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_btn_date"
        android:text="@string/setEndPeriod"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_dyn_date_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_btn_date"
        android:text="@string/setPeriod"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.333333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66666" />

</androidx.constraintlayout.widget.ConstraintLayout>